# instance

./: .envrc  Cargo.toml  LICENSE.md  README.md  default.nix  shell.nix
src/: main.rs
templates/: cargo-init.sh  instance_config.toml  rust.dev.shell.nix
tools/: flake.nix
