[package]
name = "instance"
version = "0.1.0"
authors = ["bootstrap-prime <bootstrap.prime@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"
toml = "0.5.8"
